added[client]: start chrome from script & use .env in start.sh

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
-BACKEND_URL=https://localhost
-KICKER_ID=0
+BACKEND_URL=http://localhost
+BACKEND_FRONTEND_URL=http://localhost
+KICKER_ID=1
 SCANNER_BLACK=111
 SCANNER_WHITE=222
