--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kickä",
+  "name": "kickae",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
     "next": "12.1.5",
+    "qrcode.react": "^3.0.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "sass": "^1.50.1"
@@ -19,8 +20,14 @@
     "@types/node": "17.0.26",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "autoprefixer": "^10.4.5",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-react": "^7.29.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
